# asyar-launcher

./: .gitignore  README.md  RELEASING.md  clean-install-extensions.sh  clean-install.sh  eslint.config.js  fix_extension_manager.py  fix_extension_manager_again.py  fix_imports.py  logs.txt  package.json  patch_cargo_toml.py  patch_command_rs.py  patch_extension_manager.py  patch_extension_manager_ipc.py  patch_lib_rs.py  patch_store_branch.py  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tauri_docs.md  tsconfig.json  update_page.py  vite.config.js  vitest.config.ts
.github/workflows/: build-cross-platform.yml  release.yml  test-and-lint.yml
docs/: ARCHITECTURE.md  README.md  extension-development.md  production-extension-plan.md  tokens.md
docs/explanation/: README.md  asyar-extension-protocol.md  auth-and-subscription.md  data-persistence.md  extension-runtime.md  host-os-integration.md  host-startup-and-installation.md  introduction.md  ipc-bridge.md  lifecycle.md  permission-system.md  system-overview.md  technology-stack.md  two-tier-model.md
docs/how-to/: README.md  best-practices.md  debugging.md  publishing.md  use-create-extension-tool.md
docs/reference/: README.md  actions.md  background-scheduling.md  cli.md  command-arguments.md  deeplink-triggering.md  host-settings.md  manifest.md  permissions.md  searchbar-accessory.md  troubleshooting.md
docs/tutorials/: README.md  bookmarks-example.md  manual-setup.md  prerequisites.md  quick-start.md
scripts/: generate-diagnostic-kinds.mjs  release.js
src/: app.html  bindings.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/built-in-extensions/clipboard-history/: index.es.js
src-tauri/built-in-extensions/store/: index.es.js
src-tauri/built-in-features/applications/: manifest.json
src-tauri/built-in-features/calculator/: manifest.json
src-tauri/built-in-features/clipboard-history/: manifest.json
src-tauri/built-in-features/create-extension/: manifest.json
src-tauri/built-in-features/portals/: manifest.json
src-tauri/built-in-features/settings/: manifest.json
src-tauri/built-in-features/shortcuts/: manifest.json
src-tauri/built-in-features/snippets/: manifest.json
src-tauri/built-in-features/store/: manifest.json
src-tauri/built-in-features/window-management/: manifest.json
src-tauri/capabilities/: default.json  hud.json
src-tauri/icons/: icon.icns
src-tauri/resources/built-in-extensions/clipboard-history/: vite.config.js
src-tauri/resources/built-in-extensions/store/: ExtensionListView.svelte
src-tauri/src/: command.rs  deeplink.rs  diagnostics.rs  error.rs  lib.rs  main.rs  permissions.rs  snippets.rs  tray.rs  uri_schemes.rs  window.rs
src-tauri/src/aliases/: commands.rs  mod.rs  models.rs
src-tauri/src/app_events/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/app_updater/: mod.rs  scheduler.rs  sentinel.rs  service.rs  state.rs
src-tauri/src/application/: index_watcher.rs  mod.rs  service.rs  uninstall.rs
src-tauri/src/auth/: api_client.rs  mod.rs  state.rs  token_store.rs
src-tauri/src/commands/: app.rs  app_events.rs  app_updater.rs  application_index.rs  applications.rs  auth.rs  command_arg_defaults.rs  extension_onboarding.rs  extension_preferences.rs  extension_runtime.rs  extension_state.rs  extensions.rs  file_manager.rs  files.rs  fs_watcher.rs  hud.rs  iframe_lifecycle.rs  input.rs  mod.rs  oauth.rs  power.rs  profile.rs  searchbar_accessory.rs  selection.rs  shell.rs  shortcuts.rs  snippet_commands.rs  sync.rs  system.rs  system_events.rs  timers.rs  window_management.rs
src-tauri/src/event_hub/: mod.rs
src-tauri/src/extension_tray/: backend.rs  commands.rs  extension_lookup.rs  icon.rs  item.rs  manager.rs  mod.rs  path.rs  validation.rs
src-tauri/src/extensions/: discovery.rs  headless.rs  installer.rs  lifecycle.rs  mod.rs  onboarding_intercept.rs  onboarding_state.rs  scheduler.rs  update_scheduler.rs  updater.rs
src-tauri/src/extensions/extension_runtime/: context.rs  emitter.rs  manager.rs  mod.rs  proptests.rs  ticker.rs  types.rs  wire.rs
src-tauri/src/extensions/extension_state/: mod.rs
src-tauri/src/extensions/iframe_lifecycle/: emitter.rs  mod.rs  proptests.rs  ticker.rs  types.rs
src-tauri/src/fs_watcher/: matcher.rs  mod.rs
src-tauri/src/hud_window/: mod.rs  service.rs
src-tauri/src/index_events/: mod.rs
src-tauri/src/notifications/: backend.rs  commands.rs  dispatch.rs  linux.rs  macos.rs  mod.rs  registry.rs  scheduler.rs  windows.rs
src-tauri/src/oauth/: mod.rs  pkce.rs  service.rs  token_store.rs
src-tauri/src/onboarding/: commands.rs  mod.rs  persistence.rs  state.rs  window.rs
src-tauri/src/platform/: input.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/power/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/profile/: archive.rs  encryption.rs  mod.rs
src-tauri/src/search_engine/: commands.rs  mod.rs  models.rs
src-tauri/src/selection/: error.rs  mod.rs  service.rs
src-tauri/src/selection/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/shell/: mod.rs  scheduler.rs
src-tauri/src/storage/: clipboard.rs  command_arg_defaults.rs  commands.rs  extension_cache.rs  extension_kv.rs  extension_preferences.rs  extension_state.rs  mod.rs  searchbar_accessory.rs  shell.rs  shortcuts.rs  snippets.rs  timers.rs
src-tauri/src/system_events/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/timers/: mod.rs  scheduler.rs  startup.rs
src-tauri/src/window_management/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src-tauri/tests/fixtures/worker_view_fixture/: manifest.json  view.html  worker.html
src/api/: ApplicationApi.ts  ClipboardApi.ts  LoggingApi.ts  NavigationApi.ts  NotificationApi.ts  WindowApi.ts  extensionApi.ts
src/components/: ResultsList.svelte  index.ts
src/lib/: appInitializer.ts  asyar-api.ts  asyar-sdk.ts  extensionAvatar.ts  iconUtils.ts  icons.ts  searchResultMapper.test.ts  searchResultMapper.ts  themeFonts.test.ts  themeFonts.ts  (+5 more)
(+730 files in other folders)
