[package]
name = "asyar"
version = "0.1.0"
description = "A Tauri App"
authors = ["Khoshbin Ali <xoshbin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asyar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
thiserror = "1.0.63"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
enigo = "0.1.3"
tauri-plugin-notification = "2"
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.6"
fuzzy-matcher = "0.3.7" # Added for better fuzzy search
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] } # For downloading
zip = { version = "2.1", default-features = false, features = ["deflate"] } # For extracting zip files
futures-util = "0.3" # For stream handling
tokio-util = { version = "0.7", features = ["codec"] } # For async file I/O helpers
tempfile = "3.10" # For temporary file handling
async_zip = { version = "0.0.17", features = ["full", "tokio"] } # Enable tokio feature
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"


[features]
cargo-clippy = []
