[package]
name = "asyar"
version = "0.1.1-10"
description = "A Tauri App"
authors = ["Khoshbin Ali <xoshbin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asyar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
percent-encoding = "2.3"
base64 = "0.22"
dirs = "5.0"
url = "2"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
semver = "1"
specta = { version = "2.0.0-rc.23", features = ["derive", "collect"] }
specta-typescript = "0.0.10"
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
thiserror = "1.0.63"
enigo = "0.1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-notification = "2"
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-clipboard-x = "2"
window-vibrancy = "0.6"
fuzzy-matcher = "0.3.7" # Added for better fuzzy search
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1"
reqwest = { version = "0.12", features = ["json", "stream"] } # For downloading
zip = { version = "2.1", default-features = false, features = ["deflate"] } # For extracting zip files
futures-util = "0.3" # For stream handling
tokio-util = { version = "0.7", features = ["codec"] } # For async file I/O helpers
tempfile = "3.10" # For temporary file handling
async_zip = { version = "0.0.17", features = ["full", "tokio"] } # Enable tokio feature
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.0.0"
tauri-plugin-updater = "2.0.0"
tauri-plugin-deep-link = "2"
arboard = "3.6.1"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"


[features]
cargo-clippy = []

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
icns = "0.3"
block2 = "0.5"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["all"] }
objc2-app-kit = { version = "0.2", features = ["all"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
png = "0.17"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell_Common",
    "Win32_UI_Accessibility",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"

[dev-dependencies]
mockito = "1.4"
